Make api_host to be configurable
Up until this commit, the icinga2 api endpoint (which is used for
gathering dependency information) was hardcoded to localhost.

--- a/application/views/scripts/module/kickstart.phtml
+++ b/application/views/scripts/module/kickstart.phtml
@@ -25,6 +25,12 @@
                 <legend>API Login Information</legend>
                 <dl>
                     <!-- <div class="hint"></div> -->
+                    <dt id="host-label">
+                        <label for="host">Host</label>
+                    </dt>
+                    <dd id="host-element">
+                        <input type="text" name="host" id="host-field">
+                    </dd>
                     <dt id="port-label">
                         <label for="port">Port</label>
                     </dt>
